--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "dotenv": "^17.0.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.525.0",
+    "mammoth": "^1.9.1",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
     "openai": "^5.8.2",
+    "pdfjs-dist": "^5.3.31",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
